# Kvadra-load-view

./: CMakeLists.txt  README.md
src/: http_server.cpp  http_server.h  main.cpp  resource_monitor.cpp  resource_monitor.h
web/: app.js  app.ts  index.html  styles.css
